[tool.poetry]
name = "backend-coueswork"
version = "0.1.0"
description = ""
authors = ["Kris <ssspers92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
coverage = "^7.3.4"
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
